@@ -1,5 +1,8 @@
 shady-KISS-skin History
 -------------------------------------------
+2016-03-13:
+- Fixed progressbarcolour in plex-detail-view
+
 
 2016-03-12:
 - First steps with plug-plex-detail
